# graphics-learnig

./: .gitignore  Cargo.toml  LICENSE  README.md
comands/: chapter-10.sh  chapter-11.sh  chapter-12.sh  chapter-13.sh  chapter-2.sh  chapter-3.sh  chapter-4.sh  chapter-5.sh  chapter-6.sh  chapter-7.sh  chapter-8.sh  chapter-9.sh
commands/: chapter-10.sh  chapter-4.sh  chapter-8.sh  chapter-9.sh
examples/: chapter-1.rs  chapter-10.rs  chapter-11.rs  chapter-12.rs  chapter-13.rs  chapter-2.rs  chapter-2.sh  chapter-3.rs  chapter-3.sh  chapter-4.rs  chapter-4.sh  chapter-5.rs  chapter-5.sh  chapter-6.rs  chapter-6.sh  chapter-7.rs  chapter-7.sh  chapter-8.rs  chapter-8.sh  chapter-9.rs  chapter5.sh  image-7.ppm  image-8.ppm  image.ppm  readme.md
outputs/: image-10.ppm  image-11.ppm  image-12.ppm  image-2.ppm  image-3.ppm  image-4.ppm  image-5.ppm  image-6.ppm  image-7.ppm  image-8.ppm  image-9.ppm
src/: aabb.rs  bvh.rs  camera.rs  hittable.rs  lib.rs  material.rs  perlin.rs  ray.rs  texture.rs  vec.rs
src/hittable/: box.rs  constant_medium.rs  plane.rs  sphere.rs
