[package]
name = "ray_tracing_the_next_week"
version = "0.1.0"
authors = ["pengyihao <pathology666@163.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
license_file = "LICENSE"
keywords = ["graphics"]
description = "codes I wrote when learning ray tracing with the book ray tracing in one weekend"
repository = "https://github.com/pathologyenigma/ray_tracing_in_one_weekend"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"